refactor(gateway): restored body logging and data masking in logging filter